Support java 21